Created man-walking-default.svg; Edited VelgIkon, PoengVelger and Loggbok

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -10,6 +10,7 @@ unique_ids:
     icons8-triathlon-64.png: '1744799276114728539265702.5149'
     lykke.png: '1744794185416718979266947.6279'
     lykkehjul.jpg: '174227380325212014709124.972933'
+    man-walking-default.svg: '174492431243129651969352.101128'
     relax.png: '1743409632679138225943962.50644'
     standard-page.html: FWNBRYTQ5FYKRMFR5TQCDTKGH36EROKJ
     theme.css: 4XELZEEUTVXOLQDXMJPQ3IRQPNKSRQ3I
