--- a/anvil.yaml
+++ b/anvil.yaml
@@ -33,6 +33,9 @@ db_schema:
     - admin_ui: {width: 200}
       name: beskrivelse
       type: string
+    - admin_ui: {width: 200}
+      name: skritt
+      type: number
     server: full
     title: Aktivitet
   badges:
