--- a/anvil.yaml
+++ b/anvil.yaml
@@ -242,5 +242,5 @@ services:
 - client_config: {}
   server_config: {}
   source: /runtime/services/anvil/secrets.yml
-startup: {module: Login, type: form}
+startup: {module: VelgPoeng, type: form}
 startup_form: null
