--- a/client_code/VelgPoeng/form_template.yaml
+++ b/client_code/VelgPoeng/form_template.yaml
@@ -2,7 +2,7 @@ components:
 - components:
   - layout_properties: {grid_position: 'HXWFYG,YXSYIF'}
     name: ukedag_label
-    properties: {role: headline}
+    properties: {align: center, role: headline}
     type: Label
   - components:
     - components:
@@ -14,26 +14,108 @@ components:
         type: TextBox
       layout_properties: {}
       name: flow_panel_1
-      properties: {}
+      properties: {align: center}
       type: FlowPanel
+    layout_properties: {grid_position: 'NNWEVH,NESHQD'}
+    name: skritt_panel_1
+    properties: {}
+    type: DataRowPanel
+  - components:
+    - components:
+      - components:
+        - layout_properties: {grid_position: 'CVIMEA,CGJOAZ'}
+          name: label_2
+          properties: {align: center, text: Velg type trening}
+          type: Label
+        - layout_properties: {grid_position: 'TAJMYP,RJOCIC'}
+          name: ikon_repeating_panel
+          properties: {item_template: VelgPoeng.ItemTemplate4}
+          type: RepeatingPanel
+        layout_properties: {grid_position: 'SRHCKW,SDURNG'}
+        name: outlined_card_3
+        properties: {role: outlined-card}
+        type: ColumnPanel
+      - components:
+        - layout_properties: {}
+          name: label_1_copy
+          properties: {text: Øktens varighet}
+          type: Label
+        - data_bindings:
+          - {code: '', property: items, writeback: false}
+          name: poeng_drop
+          properties: {}
+          type: DropDown
+        - components:
+          - event_bindings: {mouse_down: ikon_preview_click}
+            layout_properties: {grid_position: 'VJBWVC,KSQHVW'}
+            name: ikon_preview
+            properties: {height: 40.428558349609375}
+            type: Image
+          layout_properties: {width: 84.41052783203125}
+          name: outlined_card_2
+          properties: {role: outlined-card}
+          type: ColumnPanel
+        layout_properties: {grid_position: 'KSQVVT,DDKTMH'}
+        name: flow_panel_1_copy
+        properties: {align: center}
+        type: FlowPanel
+      layout_properties: {column: 'null'}
+      name: column_panel_1
+      properties: {}
+      type: ColumnPanel
+    layout_properties: {grid_position: 'FZXVMQ,KHYWTP'}
+    name: trening_panel_1
+    properties: {visible: false}
+    type: DataRowPanel
+  - components:
+    - layout_properties: {grid_position: 'NOTDIJ,CRJSEI'}
+      name: label_1
+      properties: {text: 'Beskrivelse:'}
+      type: Label
+    - layout_properties: {grid_position: 'OEOLDF,PPLIOQ'}
+      name: beskrivelse
+      properties: {}
+      type: TextArea
+    layout_properties: {grid_position: 'FNTZDP,KSYQNJ'}
+    name: beskrivelse_panel
+    properties: {}
+    type: ColumnPanel
+  - components:
     - components:
       - event_bindings: {click: registrer_trening_click}
         layout_properties: {}
         name: registrer_trening
-        properties: {role: tonal-button, text: Registrer heller treningsøkt}
+        properties: {role: filled-button, text: Registrer heller treningsøkt}
         type: Button
       - layout_properties: {}
         name: lagre_skritt
-        properties: {align: right, role: tonal-button, text: OK}
+        properties: {align: right, role: filled-button, text: OK}
         type: Button
-      layout_properties: {column: 'null'}
+      layout_properties: {grid_position: 'ZPDVGN,TUZNOC'}
       name: flow_panel_2
       properties: {align: right}
       type: FlowPanel
-    layout_properties: {grid_position: 'NNWEVH,NESHQD'}
-    name: skritt_panel
+    layout_properties: {grid_position: 'KVCIGQ,QNPISS'}
+    name: skritt_panel_2
     properties: {}
-    type: DataRowPanel
+    type: ColumnPanel
+  - components:
+    - components:
+      - event_bindings: {click: button_1_click}
+        name: button_1
+        properties: {role: filled-button, text: Registrer heller skritt}
+        type: Button
+      - name: lagre_trening
+        properties: {role: filled-button, text: OK}
+        type: Button
+      layout_properties: {grid_position: 'KQFMOA,XWRNHY'}
+      name: flow_panel_3
+      properties: {align: right}
+      type: FlowPanel
+    layout_properties: {grid_position: 'AEXYXF,JEXIMY'}
+    name: trening_panel_2
+    properties: {visible: false}
+    type: ColumnPanel
   layout_properties: {grid_position: 'BDFDPY,CPRVGV'}
   name: outlined_card_1
   properties: {role: elevated-card}
