--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -1,12 +1,16 @@
 components:
 - components:
-  - layout_properties: {grid_position: 'TCJQBY,QHFEWP'}
+  - layout_properties: {grid_position: 'JVNOSK,KTOBHB'}
     name: label_1
     properties: {role: headline, text: Endringslogg}
     type: Label
+  - layout_properties: {grid_position: 'HPCFSP,RLRDBV'}
+    name: text_area_14
+    properties: {text: '18/4 Bygget om måten man legger inn aktiviteter og skritt. Enklere for bruker. '}
+    type: TextArea
   - layout_properties: {grid_position: 'YDWXMR,JTPKXU'}
     name: text_area_13
-    properties: {text: 'La til badges. Foreløpig to aktive badges, men plass til veldig mange. '}
+    properties: {text: '17/4 La til badges. Foreløpig to aktive badges, men plass til veldig mange. '}
     type: TextArea
   - layout_properties: {grid_position: 'SXEDQY,XELDVM'}
     name: text_area_12
@@ -86,8 +90,9 @@ components:
         Registrere vinnere i databasen for at AI skal vite det
         resultatliste for team bør ta hensyn til teamets lengste streak
         Flere badges
-        Legge til bonuspoeng i resultatliste. Vise badges på resultatlister og på kikk-bildet
+        Vise badges på resultatlister og på kikk-bildet
         Legge til Ligaer
+        La programmet huske om bruker foretrekker skritt eller trening, og vise den delen av bildet først.
     type: TextArea
   - event_bindings: {click: button_1_click}
     layout_properties: {grid_position: 'RUNMFH,GYRFVX'}
