--- a/client_code/PoengVelger/form_template.yaml
+++ b/client_code/PoengVelger/form_template.yaml
@@ -7,18 +7,27 @@ components:
   - components:
     - components:
       - components:
-        - layout_properties: {}
-          name: label_3
-          properties: {text: 'Antall skritt:'}
+        - components:
+          - layout_properties: {}
+            name: label_3
+            properties: {text: 'Antall skritt:'}
+            type: Label
+          - layout_properties: {width: 100.5714111328125}
+            name: antall_skritt
+            properties: {}
+            type: TextBox
+          layout_properties: {grid_position: 'OMVZCP,VVKYRL'}
+          name: skritt_panel_flow1
+          properties: {align: center}
+          type: FlowPanel
+        - layout_properties: {grid_position: 'XFFVEH,NQYPTH'}
+          name: label_5
+          properties: {font_size: 8, text: Du må ha mer enn 8000 skritt i fem dager for å delta i ukens trekning. Totalt antall skritt kan føre til høyere plassering og det er derfor lurt å registrere alle skritt selv om du har færre eller flere skritt enn 8000.}
           type: Label
-        - layout_properties: {width: 100.5714111328125}
-          name: antall_skritt
-          properties: {}
-          type: TextBox
-        layout_properties: {grid_position: 'BKOXHI,SWZVCN'}
+        layout_properties: {grid_position: 'ZJIUIQ,WSAHEQ'}
         name: skritt_panel_1
-        properties: {align: center}
-        type: FlowPanel
+        properties: {}
+        type: ColumnPanel
       - components:
         - components:
           - layout_properties: {}
