--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -6,7 +6,9 @@ components:
     type: Label
   - layout_properties: {grid_position: 'HPCFSP,RLRDBV'}
     name: text_area_14
-    properties: {text: '18/4 Bygget om måten man legger inn aktiviteter og skritt. Enklere for bruker. '}
+    properties:
+      height: 104
+      text: "18/4 Bygget om måten man legger inn aktiviteter og skritt. Enklere for bruker. \nAktiverte tre prestasjoner\nAktiverte AI til å informere deltager om prestasjoner"
     type: TextArea
   - layout_properties: {grid_position: 'YDWXMR,JTPKXU'}
     name: text_area_13
@@ -91,6 +93,7 @@ components:
         resultatliste for team bør ta hensyn til teamets lengste streak
         Flere badges
         Vise badges på resultatlister og på kikk-bildet
+        Kikkbildet må oppdateres emd nye endringer i hovedbildet
         Legge til Ligaer
         La programmet huske om bruker foretrekker skritt eller trening, og vise den delen av bildet først.
     type: TextArea
