--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -8,7 +8,7 @@ components:
     name: text_area_14
     properties:
       height: 104
-      text: "18/4 Bygget om måten man legger inn aktiviteter og skritt. Enklere for bruker. \nAktiverte tre prestasjoner\nAktiverte AI til å informere deltager om prestasjoner"
+      text: "18/4 Bygget om måten man legger inn aktiviteter og skritt. Enklere for bruker.\nProgrammet husker om bruker sist var i skritt eller trening og åpner rett del (Er dette pålitelig ?? må testes) \nAktiverte tre prestasjoner\nAktiverte AI til å informere deltager om prestasjoner"
     type: TextArea
   - layout_properties: {grid_position: 'YDWXMR,JTPKXU'}
     name: text_area_13
@@ -85,7 +85,7 @@ components:
     name: text_area_4
     properties:
       height: 355
-      text: |
+      text: |+
         Bør kunne redigere en dag ved å klikke hvor som helst i dagen, ikke bare på poengtallet.
         Slette tomme team hver natt
         Slette team med færre enn tre hver helg
@@ -95,7 +95,7 @@ components:
         Vise badges på resultatlister og på kikk-bildet
         Kikkbildet må oppdateres emd nye endringer i hovedbildet
         Legge til Ligaer
-        La programmet huske om bruker foretrekker skritt eller trening, og vise den delen av bildet først.
+
     type: TextArea
   - event_bindings: {click: button_1_click}
     layout_properties: {grid_position: 'RUNMFH,GYRFVX'}
