--- a/client_code/Resultat_individuell/form_template.yaml
+++ b/client_code/Resultat_individuell/form_template.yaml
@@ -19,9 +19,6 @@ components:
     properties:
       columns:
       - {data_key: column_1, expand: false, id: JKSDUP, title: Deltager, width: '200'}
-      - {data_key: column_2, id: VJQQOR, title: Poeng, width: '60'}
-      - {data_key: column_1, id: AHNFPO, title: Bonus, width: '60'}
-      - {data_key: column_1, id: ZPQDNV, title: Streak, width: '60'}
       - {data_key: column_1, id: PJNLQL, title: Score, width: '60'}
       - {data_key: column_1, expand: false, id: LSHEHV, title: Team, width: 98.7142333984375}
     type: DataGrid
@@ -65,6 +62,16 @@ components:
           margin: ['0', null, '0', null]
           padding: ['0', null, '0', null]
         text: Score = ((poeng + bonus)  x 100)  + streak
+      type: Label
+    - layout_properties: {grid_position: 'XQGGRO,NPWPOT'}
+      name: label_2_copy_copy_copy
+      properties:
+        align: center
+        font_size: 8
+        spacing:
+          margin: ['0', null, '0', null]
+          padding: ['0', null, '0', null]
+        text: Pek på score for å se utregningen
       type: Label
     layout_properties: {grid_position: 'UADQNT,KYRNWY'}
     name: outlined_card_2
