--- a/client_code/admin/form_template.yaml
+++ b/client_code/admin/form_template.yaml
@@ -255,18 +255,18 @@ components:
         name: endre_konkurranse
         properties: {role: filled-button, text: Endre konkurranse}
         type: Button
+      - components:
+        - event_bindings: {change: korrigering_check_change}
+          layout_properties: {}
+          name: korrigering_check
+          properties: {background: lightgray, text: Åpne for korrigering lengre tilbake enn en dag}
+          type: CheckBox
+        layout_properties: {grid_position: 'SRBAOE,QVOPDB'}
+        name: flow_panel_13
+        properties: {align: center}
+        type: FlowPanel
       layout_properties: {grid_position: 'HSKZOU,ZOOUPO'}
       name: outlined_card_3
-      properties: {role: outlined-card}
-      type: ColumnPanel
-    - components:
-      - event_bindings: {click: trekningsdata_button_click}
-        layout_properties: {grid_position: 'NAPUGH,LVPUMB'}
-        name: trekningsdata_button
-        properties: {role: filled-button, text: Slett trekninsdata og opprett nytt}
-        type: Button
-      layout_properties: {grid_position: 'WUUMNM,NRKRPW'}
-      name: outlined_card_4
       properties: {role: outlined-card}
       type: ColumnPanel
     layout_properties: {grid_position: 'NWYMHD,ASANKT'}
