--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -111,12 +111,12 @@ components:
         properties: {height: '30', source: _/theme/icons8-triathlon-64.png, tooltip: Triathlon, visible: false}
         type: Image
       - layout_properties: {width: 30}
-        name: image_4
-        properties: {height: '30', source: _/theme/icons8-habit-64.png, tooltip: '', visible: false}
+        name: badge_4
+        properties: {height: '30', source: _/theme/icons8-habit-64.png, tooltip: Habit Master, visible: false}
         type: Image
       - layout_properties: {width: 30}
-        name: image_5
-        properties: {height: '30', source: _/theme/grey badge.png, tooltip: '', visible: false}
+        name: badge_5
+        properties: {height: '30', source: _/theme/icons8-habit-64 (1).png, tooltip: Habit God, visible: false}
         type: Image
       - layout_properties: {width: 30}
         name: image_6
