--- a/anvil.yaml
+++ b/anvil.yaml
@@ -1,5 +1,23 @@
 allow_embedding: false
 db_schema:
+  ai_log:
+    client: none
+    columns:
+    - admin_ui: {order: 0, width: 200}
+      name: user
+      target: users
+      type: link_single
+    - admin_ui: {order: 1, width: 200}
+      name: date
+      type: datetime
+    - admin_ui: {order: 2, width: 200}
+      name: prompt
+      type: string
+    - admin_ui: {order: 3, width: 200}
+      name: svar
+      type: string
+    server: full
+    title: AI_log
   ai_prompt:
     client: none
     columns:
