--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -14,7 +14,7 @@ components:
     name: text_area_14
     properties:
       height: 141.28570556640625
-      text: "18/4 Bygget om måten man legger inn aktiviteter og skritt. Enklere for bruker.\nProgrammet husker om bruker sist var i skritt eller trening og åpner rett del (Er dette pålitelig ?? må testes) \nAktiverte tre prestasjoner\nAktiverte AI til å informere deltager om prestasjoner"
+      text: "18/4 Bygget om måten man legger inn aktiviteter og skritt. Enklere for bruker.\nProgrammet husker om bruker sist var i skritt eller trening og åpner rett del \nAktiverte tre prestasjoner\nAktiverte AI til å informere deltager om prestasjoner"
     type: TextArea
   - layout_properties: {grid_position: 'YDWXMR,JTPKXU'}
     name: text_area_13
@@ -101,6 +101,7 @@ components:
         Vise badges på resultatlister og på kikk-bildet
         Kikkbildet må oppdateres emd nye endringer i hovedbildet
         Legge til Ligaer
+        sjekk_badge_4 feiler
 
     type: TextArea
   - event_bindings: {click: button_1_click}
