--- a/client_code/PoengVelger/form_template.yaml
+++ b/client_code/PoengVelger/form_template.yaml
@@ -22,7 +22,7 @@ components:
           type: FlowPanel
         - layout_properties: {grid_position: 'XFFVEH,NQYPTH'}
           name: label_5
-          properties: {font_size: 8, text: Du må ha mer enn 8000 skritt i fem dager for å delta i ukens trekning. Totalt antall skritt kan føre til høyere plassering og det er derfor lurt å registrere alle skritt selv om du har færre eller flere skritt enn 8000.}
+          properties: {align: center, font_size: 8, text: 8000 eller mer skritt gir 1 poeng. Du må ha minst 1 poeng i fem dager for å delta i ukens trekning.}
           type: Label
         layout_properties: {grid_position: 'ZJIUIQ,WSAHEQ'}
         name: skritt_panel_1
