--- a/theme/parameters.yaml
+++ b/theme/parameters.yaml
@@ -1,34 +1,34 @@
 color_scheme:
   colors:
-  - {color: '#006874', name: Primary}
-  - {color: '#96F0FF', name: Primary Container}
+  - {color: '#006C48', name: Primary}
+  - {color: '#00A36C', name: Primary Container}
   - {color: '#FFFFFF', name: On Primary}
-  - {color: '#001F24', name: On Primary Container}
-  - {color: '#486367', name: Secondary}
-  - {color: '#CBE8ED', name: Secondary Container}
+  - {color: '#002113', name: On Primary Container}
+  - {color: '#496455', name: Secondary}
+  - {color: '#CBEAD6', name: Secondary Container}
   - {color: '#FFFFFF', name: On Secondary}
-  - {color: '#031F23', name: On Secondary Container}
-  - {color: '#515E80', name: Tertiary}
-  - {color: '#DAE2FF', name: Tertiary Container}
+  - {color: '#052014', name: On Secondary Container}
+  - {color: '#326576', name: Tertiary}
+  - {color: '#B8EAFF', name: Tertiary Container}
   - {color: '#FFFFFF', name: On Tertiary}
-  - {color: '#0C1A39', name: On Tertiary Container}
-  - {color: '#BA1A1A', name: Error}
-  - {color: '#FAFDFD', name: Background}
-  - {color: '#FAFDFD', name: Surface}
-  - {color: '#191C1D', name: On Background}
-  - {color: '#191C1D', name: On Surface}
-  - {color: '#DBE4E6', name: Surface Variant}
-  - {color: '#3F484A', name: On Surface Variant}
-  - {color: '#6F797A', name: Outline}
-  - {color: 'rgba(25, 28, 29, 0.38)', name: On Disabled}
-  - {color: 'rgba(25, 28, 29, 0.12)', name: Disabled Container}
-  - {color: 'rgba(255, 255, 255, 0.08)', name: Light Overlay 1}
+  - {color: '#001F28', name: On Tertiary Container}
+  - {color: '#D64D47', name: Error}
+  - {color: '#FBFDF8', name: Background}
+  - {color: '#FBFDF8', name: Surface}
+  - {color: '#191C1A', name: On Background}
+  - {color: '#191C1A', name: On Surface}
+  - {color: '#DCE5DD', name: Surface Variant}
+  - {color: '#404943', name: On Surface Variant}
+  - {color: '#707973', name: Outline}
+  - {color: 'rgba(25, 28, 26, 0.38)', name: On Disabled}
+  - {color: 'rgba(25, 28, 26, 0.12)', name: Disabled Container}
+  - {color: 'rgba(255, 255, 255, 0.8)', name: Light Overlay 1}
   - {color: 'rgba(255, 255, 255, 0.12)', name: Light Overlay 2}
-  - {color: 'rgba(3, 31, 35, 0.08)', name: Dark Overlay 1}
-  - {color: 'rgba(3, 31, 35, 0.12)', name: Dark Overlay 2}
-  - {color: 'rgba(0, 104, 116, 0.05)', name: Primary Overlay 1}
-  - {color: 'rgba(0, 104, 116, 0.08)', name: Primary Overlay 2}
-  - {color: 'rgba(0, 104, 116, 0.11)', name: Primary Overlay 3}
+  - {color: 'rgba(5, 32, 20, 0.8)', name: Dark Overlay 1}
+  - {color: 'rgba(51, 51, 61, 0.12)', name: Dark Overlay 2}
+  - {color: 'rgba(0, 108, 72, 0.05)', name: Primary Overlay 1}
+  - {color: 'rgba(0, 108, 72, 0.08)', name: Primary Overlay 2}
+  - {color: 'rgba(0, 108, 72, 0.11)', name: Primary Overlay 3}
   preset_groups:
   - name: Colour Scheme
     options:
