--- a/client_code/VelgIkon/ItemTemplate1/form_template.yaml
+++ b/client_code/VelgIkon/ItemTemplate1/form_template.yaml
@@ -1,4 +1,8 @@
 components:
+- layout_properties: {grid_position: 'DEGVNE,MGNHMC'}
+  name: label_1
+  properties: {}
+  type: Label
 - components:
   - event_bindings: {mouse_down: image_click}
     layout_properties: {width: 60.6666259765625}
