--- a/client_code/VelgIkon/ItemTemplate1/form_template.yaml
+++ b/client_code/VelgIkon/ItemTemplate1/form_template.yaml
@@ -4,26 +4,82 @@ components:
   properties: {}
   type: Label
 - components:
-  - event_bindings: {mouse_down: image_click}
-    layout_properties: {width: 60.6666259765625}
-    name: image_1
-    properties: {height: '60'}
-    type: Image
-  - event_bindings: {mouse_down: image_click}
+  - components:
+    - event_bindings: {mouse_down: image_click}
+      layout_properties: {grid_position: 'TKIHYI,HSEVOZ'}
+      name: image_1
+      properties: {height: '60'}
+      type: Image
+    - layout_properties: {grid_position: 'ARFTSL,XHACCG'}
+      name: aktivitet_1
+      properties:
+        align: center
+        font_size: 8
+        spacing:
+          margin: ['0', null, '0', null]
+          padding: ['0', null, '0', null]
+      type: Label
     layout_properties: {width: 60}
-    name: image_2
-    properties: {height: '60'}
-    type: Image
-  - event_bindings: {mouse_down: image_click}
+    name: column_panel_1
+    properties: {}
+    type: ColumnPanel
+  - components:
+    - event_bindings: {mouse_down: image_click}
+      layout_properties: {grid_position: 'RAVKQZ,JYRLVW'}
+      name: image_2
+      properties: {height: '60'}
+      type: Image
+    - layout_properties: {grid_position: 'JIODHM,QTWJNT'}
+      name: aktivitet_2
+      properties:
+        align: center
+        font_size: 8
+        spacing:
+          margin: ['0', null, '0', null]
+          padding: ['0', null, '0', null]
+      type: Label
     layout_properties: {width: 60}
-    name: image_3
-    properties: {height: '60'}
-    type: Image
-  - event_bindings: {mouse_down: image_click}
+    name: column_panel_2
+    properties: {}
+    type: ColumnPanel
+  - components:
+    - event_bindings: {mouse_down: image_click}
+      layout_properties: {grid_position: 'YQDOFA,HRRUSF'}
+      name: image_3
+      properties: {height: '60'}
+      type: Image
+    - layout_properties: {grid_position: 'HUGMLQ,XKWCTB'}
+      name: aktivitet_3
+      properties:
+        align: center
+        font_size: 8
+        spacing:
+          margin: ['0', null, '0', null]
+          padding: ['0', null, '0', null]
+      type: Label
     layout_properties: {width: 60}
-    name: image_4
-    properties: {height: '60'}
-    type: Image
+    name: column_panel_3
+    properties: {}
+    type: ColumnPanel
+  - components:
+    - event_bindings: {mouse_down: image_click}
+      layout_properties: {grid_position: 'KIGFCE,EHFMAZ'}
+      name: image_4
+      properties: {height: '60'}
+      type: Image
+    - layout_properties: {grid_position: 'THLFUV,HSDMUD'}
+      name: aktivitet_4
+      properties:
+        align: center
+        font_size: 8
+        spacing:
+          margin: ['0', null, '0', null]
+          padding: ['0', null, '0', null]
+      type: Label
+    layout_properties: {width: 60}
+    name: column_panel_4
+    properties: {}
+    type: ColumnPanel
   layout_properties: {grid_position: 'OJOPHW,AWTDIT'}
   name: flow_panel_1
   properties: {align: center}
