--- a/anvil.yaml
+++ b/anvil.yaml
@@ -116,6 +116,24 @@ db_schema:
       type: bool
     server: full
     title: Konkurranse
+  ny_aktivitet:
+    client: search
+    columns:
+    - admin_ui: {order: 0, width: 200}
+      name: user
+      target: users
+      type: link_single
+    - admin_ui: {order: 1, width: 200}
+      name: dato
+      type: datetime
+    - admin_ui: {order: 2, width: 200}
+      name: aktivitet
+      type: string
+    - admin_ui: {order: 3, width: 200}
+      name: behandlet
+      type: bool
+    server: full
+    title: ny_aktivitet
   team:
     client: search
     columns:
