--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -170,6 +170,16 @@ components:
             text: Mandag
             tooltip: ''
           type: Label
+        - layout_properties: {grid_position: 'QEQJXU,GEASSF'}
+          name: man_skritt
+          properties:
+            align: center
+            font_size: 8
+            spacing:
+              margin: ['0', null, '0', null]
+              padding: ['0', null, '0', null]
+            visible: false
+          type: Label
         - event_bindings: {click: man_button_click}
           layout_properties: {grid_position: 'QZTGZD,BHOIWH'}
           name: man_button
@@ -192,16 +202,6 @@ components:
             spacing_below: none
             visible: true
           type: Image
-        - layout_properties: {grid_position: 'EBOSPB,LXKZQA'}
-          name: man_skritt
-          properties:
-            align: center
-            font_size: 8
-            spacing:
-              margin: ['0', null, '0', null]
-              padding: ['0', null, '0', null]
-            visible: false
-          type: Label
         - layout_properties: {grid_position: 'EBOSPB,MFIGPZ'}
           name: man_akt_label
           properties:
@@ -232,6 +232,16 @@ components:
               padding: [null, null, '0', null]
             text: Tirsdag
           type: Label
+        - layout_properties: {grid_position: 'LMTFJP,MAIZGC'}
+          name: tir_skritt
+          properties:
+            align: center
+            font_size: 8
+            spacing:
+              margin: ['0', null, '0', null]
+              padding: ['0', null, '0', null]
+            visible: false
+          type: Label
         - event_bindings: {click: tir_button_click}
           layout_properties: {grid_position: 'ZDBUKX,YNRDRQ'}
           name: tir_button
@@ -250,16 +260,6 @@ components:
             height: '32'
             margin: ['0', null, '0', null]
           type: Image
-        - layout_properties: {grid_position: 'PXLERO,MDNPRL'}
-          name: tir_skritt
-          properties:
-            align: center
-            font_size: 8
-            spacing:
-              margin: ['0', null, '0', null]
-              padding: ['0', null, '0', null]
-            visible: false
-          type: Label
         - layout_properties: {grid_position: 'PXLERO,PKVRMB'}
           name: tir_akt_label
           properties:
@@ -289,6 +289,16 @@ components:
               padding: [null, null, '0', null]
             text: Onsdag
           type: Label
+        - layout_properties: {grid_position: 'BKENWM,AHSNEL'}
+          name: ons_skritt
+          properties:
+            align: center
+            font_size: 8
+            spacing:
+              margin: ['0', null, '0', null]
+              padding: ['0', null, '0', null]
+            visible: false
+          type: Label
         - event_bindings: {click: ons_button_click}
           layout_properties: {grid_position: 'IXYRQO,DGJJMZ'}
           name: ons_button
@@ -307,16 +317,6 @@ components:
             height: '32'
             margin: ['0', null, '0', null]
           type: Image
-        - layout_properties: {grid_position: 'SOIAYZ,VOEMQE'}
-          name: ons_skritt
-          properties:
-            align: center
-            font_size: 8
-            spacing:
-              margin: ['0', null, '0', null]
-              padding: ['0', null, '0', null]
-            visible: false
-          type: Label
         - layout_properties: {grid_position: 'SOIAYZ,XAITQX'}
           name: ons_akt_label
           properties:
@@ -346,6 +346,16 @@ components:
               padding: [null, null, '0', null]
             text: Torsdag
           type: Label
+        - layout_properties: {grid_position: 'TLIDDO,JUPDKQ'}
+          name: tor_skritt
+          properties:
+            align: center
+            font_size: 8
+            spacing:
+              margin: ['0', null, '0', null]
+              padding: ['0', null, '0', null]
+            visible: false
+          type: Label
         - event_bindings: {click: tor_button_click}
           layout_properties: {grid_position: 'QHWKSS,YBOXFJ'}
           name: tor_button
@@ -364,16 +374,6 @@ components:
             height: '32'
             margin: ['0', null, '0', null]
           type: Image
-        - layout_properties: {grid_position: 'JUEBES,BLWJVP'}
-          name: tor_skritt
-          properties:
-            align: center
-            font_size: 8
-            spacing:
-              margin: ['0', null, '0', null]
-              padding: ['0', null, '0', null]
-            visible: false
-          type: Label
         - layout_properties: {grid_position: 'JUEBES,WOMSNG'}
           name: tor_akt_label
           properties:
@@ -408,6 +408,16 @@ components:
               padding: [null, null, '0', null]
             text: Fredag
           type: Label
+        - layout_properties: {grid_position: 'YYIIZS,ULQJTR'}
+          name: fre_skritt
+          properties:
+            align: center
+            font_size: 8
+            spacing:
+              margin: ['0', null, '0', null]
+              padding: ['0', null, '0', null]
+            visible: false
+          type: Label
         - event_bindings: {click: fre_button_click}
           layout_properties: {grid_position: 'IHPYUO,VXIBJA'}
           name: fre_button
@@ -426,16 +436,6 @@ components:
             height: '32'
             margin: ['0', null, '0', null]
           type: Image
-        - layout_properties: {grid_position: 'EAQPVP,BLRSID'}
-          name: fre_skritt
-          properties:
-            align: center
-            font_size: 8
-            spacing:
-              margin: ['0', null, '0', null]
-              padding: ['0', null, '0', null]
-            visible: false
-          type: Label
         - layout_properties: {grid_position: 'EAQPVP,FHTBQS'}
           name: fre_akt_label
           properties:
@@ -465,6 +465,16 @@ components:
               padding: [null, null, '0', null]
             text: Lørdag
           type: Label
+        - layout_properties: {grid_position: 'VGSWLB,AXXKOP'}
+          name: lor_skritt
+          properties:
+            align: center
+            font_size: 8
+            spacing:
+              margin: ['0', null, '0', null]
+              padding: ['0', null, '0', null]
+            visible: false
+          type: Label
         - event_bindings: {click: lor_button_click}
           layout_properties: {grid_position: 'WZOHIV,NVIUBR'}
           name: lor_button
@@ -483,16 +493,6 @@ components:
             height: '32'
             margin: ['0', null, '0', null]
           type: Image
-        - layout_properties: {grid_position: 'ETZXYW,MWCWMB'}
-          name: lor_skritt
-          properties:
-            align: center
-            font_size: 8
-            spacing:
-              margin: ['0', null, '0', null]
-              padding: ['0', null, '0', null]
-            visible: false
-          type: Label
         - layout_properties: {grid_position: 'ETZXYW,AGFTEO'}
           name: lor_akt_label
           properties:
@@ -522,6 +522,16 @@ components:
               padding: [null, null, '0', null]
             text: Søndag
           type: Label
+        - layout_properties: {grid_position: 'YXGRIR,ROSURD'}
+          name: son_skritt
+          properties:
+            align: center
+            font_size: 8
+            spacing:
+              margin: ['0', null, '0', null]
+              padding: ['0', null, '0', null]
+            visible: false
+          type: Label
         - event_bindings: {click: son_button_click}
           layout_properties: {grid_position: 'XGVADB,TGGYJY'}
           name: son_button
@@ -540,16 +550,6 @@ components:
             height: '32'
             margin: ['0', null, '0', null]
           type: Image
-        - layout_properties: {grid_position: 'JWPLVX,AVLEAD'}
-          name: son_skritt
-          properties:
-            align: center
-            font_size: 8
-            spacing:
-              margin: ['0', null, '0', null]
-              padding: ['0', null, '0', null]
-            visible: false
-          type: Label
         - layout_properties: {grid_position: 'JWPLVX,KFSMCP'}
           name: son_akt_label
           properties:
