--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -4,6 +4,10 @@ components:
     name: label_1
     properties: {role: headline, text: Endringslogg}
     type: Label
+  - layout_properties: {grid_position: 'VAQWIL,XVCGWZ'}
+    name: text_area_16
+    properties: {height: 78.5, text: '20/4 Deltager kan nå foreslå ny type idrett. Dette kommer frem i et eget bilde i admin, som kan legge inn ikon for dette. '}
+    type: TextArea
   - layout_properties: {grid_position: 'WKNQKB,YYMYWA'}
     name: text_area_15
     properties:
