--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -6,7 +6,7 @@ components:
     type: Label
   - layout_properties: {grid_position: 'VAQWIL,XVCGWZ'}
     name: text_area_16
-    properties: {height: 78.5, text: '20/4 Deltager kan nå foreslå ny type idrett. Dette kommer frem i et eget bilde i admin, som kan legge inn ikon for dette. '}
+    properties: {height: 112, text: '20/4 Deltager kan nå foreslå ny type idrett. Dette kommer frem i et eget bilde i admin, som kan legge inn ikon for dette. Ø får umiddelbart mail om nye forslag.'}
     type: TextArea
   - layout_properties: {grid_position: 'WKNQKB,YYMYWA'}
     name: text_area_15
